<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hidesign.ported.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.hidesign.ported.ui.home.PastTripFragment"
        android:label="@string/trips"
        tools:layout="@layout/fragment_past_trips" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hidesign.ported.ui.home.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/loginRegister"
        android:name="com.hidesign.ported.intro.LoginRegister"
        android:label="activity_login_register"
        tools:layout="@layout/activity_login_register" />

    <action
        android:id="@+id/nav_logout"
        app:destination="@id/loginRegister" />
</navigation>