<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mapContainer"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.tomtom.online.sdk.map.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="5dp"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/drawerButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/menu"
                android:clickable="true"
                android:elevation="2dp"
                android:contentDescription="@string/menuicon" />
            <LinearLayout
                android:id="@+id/searchViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="400dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/atv_main_destination_location"
                    android:hint="@string/search"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:inputType="textPostalAddress"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@android:color/white"
                    android:imeOptions="actionSearch"
                    android:layout_marginEnd="10dp"
                    android:dropDownWidth="match_parent"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cancelNavigation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.15"
                android:src="@drawable/close"
                android:clickable="true"
                android:elevation="5dp"
                android:contentDescription="@string/cancel_button"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/nextTurn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:text="@string/temp_direction_string"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/distanceToNextTurn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/temp_distance"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive_at"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/timeLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_time"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>